infra/web-app/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: explorer-web-app-dev
  namespace: olfyi
  labels:
    app: explorer-web-app-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: explorer-web-app-dev
  template:
    metadata:
      labels:
        app: explorer-web-app-dev
    spec:
      containers:
        - name: explorer-web-app-dev
          image: ghcr.io/0lnetworkcommunity/explorer/web-app:da7542d91029d33e1e38f40e24009a2237422b7d
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      imagePullSecrets:
        - name: docker-config
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 3
