infra/web-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer-web-app-dev
  namespace: olfyi
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: olfyi-redirect@kubernetescrd
spec:
  rules:
    - host: dev.scan.openlibra.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer-web-app-dev
                port:
                  name: http
  tls:
    - secretName: explorer-web-app-dev-tls
      hosts:
        - dev.scan.openlibra.io
